# python-cdk-project-template

./: .gitignore  Makefile  README.md  example.env  package-lock.json  package.json  pyproject.toml  replace.py
cdk/: app.py  stack.py
tests/unit/: test_main.py
